--- a/Port00/index.html
+++ b/Port00/index.html
@@ -57,17 +57,52 @@
 
          </article>
       </section>
-      <!--columna derecha-->
+      <!--columna -->
       <section class=" column column--right">
         <article class="card">
-          <h2 class=" card__title">Fron End</h2>
+          <h2 class=" card__title">FRONT END</h2>
           <div class="skills">
+            <div class="skills__item">
             <p class="skills__tech">HTML</p>
+            <div class="skills__bar skills__bar--90"></div>
+          </div>
+          <div class="skills__item">
+            <p class="skills__tech">CSS</p>
+            <div class="skills__bar skills__bar--90"></div>
+          </div>
+          <div class="skills__item">
+            <p class="skills__tech">JAVASCRIPT</p>
+            <div class="skills__bar skills__bar--70"></div>
+          </div>
+          <div class="skills__item">
+            <p class="skills__tech">BOOSTRAP</p>
             <div class="skills__bar skills__bar--80"></div>
+          </div>
+          </div>
+        </article>
+        <article class="card">
+          <h2 class=" card__title">BACK END</h2>
+          <div class="skills">
+            <div class="skills__item">
+            <p class="skills__tech">JAVA</p>
+            <div class="skills__bar skills__bar--90"></div>
+          </div>
+          <div class="skills__item">
+            <p class="skills__tech">SPRING BOOT</p>
+            <div class="skills__bar skills__bar--90"></div>
+          </div>
+          <div class="skills__item">
+            <p class="skills__tech">POSTSGRE SQL</p>
+            <div class="skills__bar skills__bar--70"></div>
+          </div>
+          <div class="skills__item">
+            <p class="skills__tech">MYSQL</p>
+            <div class="skills__bar skills__bar--80"></div>
+          </div>
           </div>
         </article>
       </section>
-
+      
     </main>
     <script src="js/scripts.js"></script>
   </body>
