--- a/Port00/index.html
+++ b/Port00/index.html
@@ -26,6 +26,12 @@
         </div>
        
     </header>
+     <!--seccion de arriva-->
+     <section class="arriva">
+      <div class="div-arriva">
+        <img class="pricipal" src="/assets/images/PaginaEnCons.png"/>
+      </div>
+    </section>
     <main class=" main"> 
        <!--columna izquierda-->
       <section class="column column--left">
@@ -104,6 +110,18 @@
       </section>
       
     </main>
+    <!-- Footer -->
+    <footer id="footer">
+      <ul class="icons">
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-instagram-square"></i>
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-solid fa-envelope"></i>
+      <ul class="copyright">
+        <li>&copy; ARCOM</li><li>Design: <a href=""> by LUCAS SIANI</a></li>
+      </ul>
+    </footer>
+
     <script src="js/scripts.js"></script>
   </body>
 </html>
