--- a/Port00/index.html
+++ b/Port00/index.html
@@ -26,13 +26,22 @@
           <div data-color="hsl(276, 79%, 70%)" class="colors_item colors_item--purple"></div>
           <div data-color="hsl(55, 79%, 70%)" class="colors_item colors_item--orange"></div>
         </div>
-       
+        <nav class="nav" id="nav1">
+        <li classe="menu" id="menu1"><a href="#" class="neon-button">MENU</a>
+          <ul class="despliegue" id="despliegue1">
+            <li><a href="#" class="despligue_dentro">ACCUEIL</a></li>
+            <li><a href="/projets.html" class="despligue_dentro">PROJETS</a></li>
+            <li><a href="#" class="despligue_dentro"> A PROPOS</a></li>
+            <li><a href="footer" class="despligue_dentro"> CONTACTS</a></li>
+          </ul>
+        </li>
+      </nav>
     </header>
    
      <!--seccion de arriva-->
      <section class="arriva">
       <div class="div-arriva">
-        <img class="pricipal" src="/assets/images/logoEntero.png"/>
+        <img class="pricipal" src="/assets/images/lsf.png"/>
       </div>
     </section>
     <!--seccion de medio-->
@@ -96,8 +105,8 @@
             <div class="skills__bar skills__bar--70"></div>
           </div>
           <div class="skills__item">
-            <p class="skills__tech">BOOSTRAP</p>
-            <div class="skills__bar skills__bar--80"></div>
+            <p class="skills__tech">REACT</p>
+            <div class="skills__bar skills__bar--50"></div>
           </div>
           </div>
         </article>
@@ -106,11 +115,11 @@
           <div class="skills">
             <div class="skills__item">
             <p class="skills__tech">JAVA</p>
-            <div class="skills__bar skills__bar--90"></div>
+            <div class="skills__bar skills__bar--70"></div>
           </div>
           <div class="skills__item">
             <p class="skills__tech">SPRING BOOT</p>
-            <div class="skills__bar skills__bar--90"></div>
+            <div class="skills__bar skills__bar--50"></div>
           </div>
           <div class="skills__item">
             <p class="skills__tech">POSTSGRE SQL</p>
@@ -128,7 +137,7 @@
     <!-- Footer -->
     <footer id="footer">
       <ul class="icons">
-        <i class="fa-brands fa-linkedin"></i>
+        <a href="https://fr.linkedin.com/in/lucas-siani-347653171?trk=public_profile_browsemap_profile-result-card_result-card_full-click"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://www.instagram.com/lucassianifaure/"> <i class="fa-brands fa-instagram-square"></i></a>
         <a href="https://github.com/Lucas199525"><i class="fa-brands fa-github"></i></a>
         <i class="fa-solid fa-envelope"></i>
